- wxCaret::SetSize() doesn't hide the caret any longer as it used to
- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not workign with wxTR_MULTIPLE
- fixes for compilation with OpenWatcom compiler
- fixed wxStaticText best size calculation (was wrong by '&' width)
- fixed calling wxFrame::Maximize(FALSE) before the window is shown

wxMotif:

- made wxFileDialog behaviour with complex wildcards more sensible (it still
  does not support all the features other ports do); refer to wxFileDialog
  documentation for a detailed explanation
- implemented wxWakeUpIdle
- for Motif 2.0, used the native combobox widget instead of the GPL'd
  xmcombo; xmcombo is still used for Motif 1.x and Lesstif when compiled
  with Motif 1.x compatibility
- implemented wxToggleButton
- wxRadioBox and wxStaticBox now use the default shadow (border) style
  instead of 

wxUniv:

- controls in toolbars now supported

wxHTML:

- added SetFonts to HTML printing classes (Adrian Philip Look)


OLD CHANGES
===========

INCOMPATIBLE CHANGES SINCE 2.2.x
================================

    Please take a few minutes to read the following list, especially
    paying attention to the most important changes which are marked
    with '!' in the first column.

    Also please note that you should ensure that WXWIN_COMPATIBILITY_2_2
    is defined to 1 if you wish to retain maximal compatibility with 2.2
    series -- however you are also strongly encouraged to try to compile
    your code without this define as it won't be default any longer in
    2.6 release.

    NB: if you want to build your program with different major versions
        of wxWindows you will probably find the wxCHECK_VERSION() macro
        (see the documentation) useful.


wxBase:

! wxArray<T>::Remove(size_t) has been removed to fix compilation problems
  under 64 bit architectures, please replace it with RemoveAt() in your
  code.
